# handwire-config-builder

./: Cargo.toml  Dockerfile  README.md  config-button.html  index.html
migrations/: migration1.sql  migration2.sql  migration3.sql  migration4.sql  seed1.sql  seed3.sql  seed4.sql  seed5.sql  seedcircuitboard.sql
resources/: button.html  circuit-row.html  col-container.html  config-button.html  index.html  key-button-layout.html  key-button-wirable.html  key-button.html  keyboard-select-option.html  keyboard-select.html  keyboard.html  keycode.html  row-container.html  row.html  tab.html
resources/index/: index.html  main.js
src/: circuitboard.rs  download_config.rs  keyboard.rs  main.rs
