[package]
name = "handwire-config-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers"] }
base64 = "0.21.2"
rusqlite = "0.29.0"
tokio = { version = "1.29.0", features = ["full"]}
tokio-rusqlite = "0.4.0"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["fs"] }
